# EDR-Agent

./: CMakeLists.txt  README.md
docs/: day_1.md
include/Linux/: Logger.hpp  ProcessHelper.hpp
src/Linux/: Logger.cpp  ProcessHelper.cpp
